# api-implementation/server/api/controllers/apiProducts/router.ts
@@ -11,6 +11,6 @@ export default express
   .get('/:name/apis', controller.allApis)
   .get('/:name/apis/:api', controller.apiByName)
   .get('/:name/revisions', controller.allRevisions)
-  .get('/:name/revisions/:version', controller.revisionByVersion)
+  .get('/:name/revisions/:semver', controller.revisionByVersion)
   ;
 
